# lightaudio

./: .gitignore  CMakeLists.txt  README.md  lightaudio.h  test
examples/: buffer_example.c  test.c
include/lightaudio/: audio.h  buffer.h  la_buffer.h  lightaudio.h  utils.h
src/: buffer.c  la_buffer.c
